# acl-mapping-px4

./: Explanation_mapper.odt  LICENSE  Readme.md
depthmap_filter/: CMakeLists.txt  nodelet.xml  package.xml
depthmap_filter/cfg/: depthmap_filter.yaml
depthmap_filter/launch/: depthmap_filter.launch
depthmap_filter/src/: depthmap_filter.cpp  depthmap_filter.hpp
depthmap_filter/test/: depthmap_filter_test.cpp
fla_msgs/: CMakeLists.txt  package.xml
fla_msgs/msg/: Detection.msg  ProcessStatus.msg
fla_utils/: CMakeLists.txt  package.xml
fla_utils/include/fla_utils/: process_status.h
fla_utils/launch/: joy.launch  quat_to_rpy.launch  safety.launch
fla_utils/python/: database.yaml  kill_switch  mission_params.yaml  mission_tool.py
fla_utils/src/: laserscan_to_pointcloud.cpp  quat_to_rpy.cpp
global-mapper/global_mapper/: CMakeLists.txt  package.xml
global-mapper/global_mapper/cmake/templates/: global_mapperConfig.cmake.in
global-mapper/global_mapper/src/cost_grid/: cost_grid.cc  cost_grid.h
global-mapper/global_mapper/src/distance_grid/: distance_grid.cc  distance_grid.h
global-mapper/global_mapper/src/global_mapper/: global_mapper.cc  global_mapper.h  params.h  planning_grids.h
global-mapper/global_mapper/src/occupancy_grid/: occupancy_grid.cc  occupancy_grid.h
global-mapper/global_mapper/src/voxel_grid/: voxel_grid.h
global-mapper/global_mapper/test/: cost_grid_tests.cc  distance_grid_tests.cc  global_mapper_tests.cc  voxel_grid_indexer_tests.cc
global-mapper/global_mapper_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
global-mapper/global_mapper_ros/cfg/: flightgoggles.yaml  global_mapper.yaml
global-mapper/global_mapper_ros/launch/: filter_and_mapper.sh  filter_and_mapper_nodelets.launch  flightgoggles_perception.launch  global_mapper_node.launch  global_mapper_node_copy.launch  global_mapper_nodelet.launch
global-mapper/global_mapper_ros/msg/: PlanningGrids.msg
global-mapper/global_mapper_ros/rviz/: default.rviz
global-mapper/global_mapper_ros/src/: global_mapper_node.cc  global_mapper_nodelet.cc
global-mapper/global_mapper_ros/src/global_mapper_ros/: global_mapper_ros.cc  global_mapper_ros.h
snapstack_msgs/: CMakeLists.txt
snapstack_msgs/msg/: AttitudeCommand.msg  ControlLog.msg  Goal.msg  IMU.msg  State.msg  TimeFilter.msg  VioFilterState.msg
