<?xml version="1.0"?>
<package format="2">
  <name>global_mapper</name>
  <version>1.1.3</version>
  <description>The global_mapper package</description>

  <maintainer email="jakeware@mit.edu">Jake Ware</maintainer>
  <author>Jake Ware</author>
  <author>John Carter</author>
  <license>MIT</license>
  <buildtool_depend>cmake</buildtool_depend>

  <!-- <depend>roscpp</depend> -->
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
